# flashboard-node-proto

./: .gitignore  README.md  pyproject.toml  reader.yaml
pcbs/: rc522-wemos.fzz
