[tool.poetry]
name = "flashboard-node-proto"
version = "0.1.0"
description = ""
authors = ["Federico Maggi <federico.maggi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
esphome = "^2022.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
